RDM-8530 - BEFTA integration (#10)
* RDM-8530 - BEFTA integration

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Register BEFTA framework and add initial sample test for health endpoint

* RDM-8530 - BEFTA integration - Java 11 warnings

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Suppress Java 11 illegal reflective access warnings from BEFTA framework

* RDM-8530 - BEFTA integration - PMD warnings

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Bump PMD version number to remove XPath deprecated attribute warnings.

* RDM-8530 - BEFTA integration - minor adjustments

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

* RDM-8530 - BEFTA integration - Update Jenkins file

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Update Jenkinsfile_CNP to archive BEFTA report

* RDM-8530 - BEFTA integration - Update Jenkins file

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Update Jenkinsfile_CNP to combine multiple after('test') statements.

* RDM-8530 - BEFTA integration - Update Jenkins file

   [RDM-8530](https://tools.hmcts.net/jira/browse/RDM-8530)

Update Jenkinsfile_CNP after dev review comments in PR #10.