@@ -7,6 +7,7 @@ plugins {
   id 'org.springframework.boot' version '2.3.0.RELEASE'
   id 'uk.gov.hmcts.java' version '0.5.0'
   id 'com.github.ben-manes.versions' version '0.28.0'
+  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.21'
   id 'org.sonarqube' version '2.8'
 }
 
@@ -68,6 +69,25 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+
+  generateCucumberReports.enabled = false
+
+  doFirst {
+    generateCucumberReports.enabled = true
+    javaexec {
+      main = "uk.gov.hmcts.reform.managecase.befta.ManageCaseBeftaMain"
+      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      args = ['--plugin', "json:$project.buildDir/reports/tests/befta/cucumber.json", '--tags', 'not @Ignore', '--glue',
+              'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features']
+      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
+    }
+  }
+}
+
+cucumberReports {
+  outputDir = file("$project.buildDir/reports/tests/befta")
+  reports = files("$project.buildDir/reports/tests/befta/cucumber.json")
 }
 
 task integration(type: Test) {
@@ -85,7 +105,7 @@ task smoke(type: Test) {
 }
 
 pmd {
-  toolVersion = "6.18.0"
+  toolVersion = "6.24.0"
   sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
   reportsDir = file("$project.buildDir/reports/pmd")
   // https://github.com/pmd/pmd/issues/876
@@ -151,6 +171,9 @@ repositories {
   mavenLocal()
   jcenter()
   mavenCentral()
+  maven {
+    url 'https://dl.bintray.com/hmcts/hmcts-maven'
+  }
 }
 
 def versions = [
@@ -212,8 +235,14 @@ dependencies {
   testImplementation group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
   testImplementation group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
 
+  // groovy v3.* added to avoid 'WARNING: Illegal reflective access by org.codehaus.groovy.reflection.CachedClass'
+  // in groovy:2.5.* when running functional/befta tests
+  testImplementation group: 'org.codehaus.groovy', name: 'groovy', version: '3.0.3'
+
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
+
+  functionalTestImplementation group: 'uk.gov.hmcts', name: 'befta-fw', version: '2.10.0'
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation sourceSets.test.runtimeClasspath
